Changelog for getResources.

- [#67] Add odd property
- [#60] Allow custom delimiters for tvFilters
- [#63] Give tplFirst/tplLast precedence over tpl_X/tpl_nX
- Automatically prepare TV values for media-source dependent TVs

getResources 1.4.2-pl (December 9, 2011)
====================================
- [#25] Add new operators to tvFilters
- [#37] Consider default values with tvFilters
- [#57] Fix tpl overrides and improve order

getResources 1.4.1-pl (December 8, 2011)
====================================
- [#57] Add support for factor-based tpls
- [#54], [#55] Fix processTVList feature

getResources 1.4.0-pl (September 21, 2011)
====================================
- [#50] Use children of parents from other contexts
- [#45] Add dbCacheFlag to control db caching of getCollection, default to false
- [#49] Allow comma-delimited list of TV names as includeTVList or processTVList

getResources 1.3.1-pl (July 14, 2011)
====================================
- [#43] Allow 0 as idx property
- [#9] Fix tvFilters grouping
- [#46] Fix criteria issue with &resources property

getResources 1.3.0-pl (March 28, 2011)
====================================
- [#33] sortbyTVType: Allow numeric and datetime TV sorting via SQL CAST()
- [#24] Fix typos in list property options
- [#4] Support multiple sortby fields via JSON object
- Use get() instead to toArray() if includeContent is false
- [#22] Add &toSeparatePlaceholders property for splitting output

getResources 1.2.2-pl (October 18, 2010)
====================================
- [#19] Fix sortbyTV returning duplicate rows

getResources 1.2.1-pl (October 11, 2010)
====================================
- Remove inadvertent call to modX::setLogTarget('ECHO')

getResources 1.2.0-pl (September 25, 2010)
====================================
- Fix error when &parents is not set
- Allow empty &sortby
- Add ability to sort by a single Template Variable value (or default value)

getResources 1.1.0-pl (July 30, 2010)