@@ -1,5 +1,6 @@
 Changelog for getResources.
 
+- [#58] Add tplCondition/conditionalTpls support
 - [#67] Add odd property
 - [#60] Allow custom delimiters for tvFilters
 - [#63] Give tplFirst/tplLast precedence over tpl_X/tpl_nX
